radarr/radarr-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: radarr
  name: radarr
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: radarr
    spec:
      containers:
      - image: linuxserver/radarr
        name: radarr
        ports:
        - containerPort: 7878
        resources: {}
        volumeMounts:
        - mountPath: /movies
          name: media
        - mountPath: /downloads
          name: radarr-data
        - mountPath: /config
          name: radarr-config
      restartPolicy: Always
      volumes:
      - name: media
        nfs:
          server: 192.168.178.33
          path: "/volume2/film2"
      - name: radarr-data
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/movies"
      - name: radarr-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/radarr-config"
status: {}
