radarr/radarr-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: radarr.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: 7878
